Sun Sep  1 13:02:24 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Remove BITSPERDIG >= INT_MAX test.  The static assertion,
	  SIZEOF_BDIGITS <= sizeof(BDIGIT) is enough.

Sun Sep  1 11:38:26 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (maxpow_in_bdigit): Removed.

Sun Sep  1 10:30:42 2013  Tanaka Akira  <akr@fsij.org>

	* numeric.c (rb_fix_bit_length): Moved from bignum.c.

Sun Sep  1 09:55:45 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (bit_length): Moved from bignum.c.
	  (nlz_int): Ditto.
	  (nlz_long): Ditto.
	  (nlz_long_long): Ditto.
	  (nlz_int128): Ditto.

Sun Sep  1 03:32:22 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bit_length): Renamed from bitsize.

Sun Sep  1 00:07:09 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_bit_length): New method.
	  (rb_fix_bit_length): Ditto.
	  [ruby-core:56247] [Feature #8700]

Sat Aug 31 22:18:29 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_getres): New method.
	  (timetick2dblnum_reciprocal): New function.

	* configure.in: Check clock_getres.

	[ruby-core:56780] [Feature #8809] accepted as a CRuby feature at
	DevelopersMeeting20130831Japan
	https://bugs.ruby-lang.org/projects/ruby/wiki/DevelopersMeeting20130831Japan

Sat Aug 31 21:02:07 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Use GMP to accelerate big Bignum multiplication.
	  (bary_mul_gmp): New function.
	  (bary_mul): Use bary_mul_gmp.
	  (bigsq): Use different threshold with GMP.

	* configure.in: Detect GMP.

	[ruby-core:56658] [Feature #8796]

Sat Aug 31 15:03:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* compile.c (NODE_MATCH3): pass CALL_INFO to opt_regexpmatch2

	* insns.def (opt_regexpmatch2): use CALL_SIMPLE_METHOD to call =~ if
	  the receiver is not a T_STRING [Bug #8847] [ruby-core:56916]

Sat Aug 31 14:07:11 2013  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (random_bytes): Use Process.clock_gettime.

Sat Aug 31 00:25:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
